--- a/application-zuul-pro.yml
+++ b/application-zuul-pro.yml
@@ -6,7 +6,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://peer1:1010/eureka/,http://peer2:1011/eureka/,http://peer3:1012/eureka/
+      defaultZone: http://localhost:1010/eureka/
   instance:
     prefer-ip-address: true # 以自己的ip 作为注册访问地址
     instance-id: zuul-server:8080 #在仪表盘显示自己的服务标识
